Fixes width of large images and spacing on tables.

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -74,3 +74,12 @@ Add styles or override variables from the theme here.
   margin-bottom: 1rem;
 }
 
+main {
+  img {
+    max-width: 100%;
+  }
+
+  table {
+    margin-bottom: 1rem;
+  }
+}
